legacy-manifests/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      imagePullSecrets:
        - name: ecr-registry-helper
      containers:
      - name: wordpress
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/ofekpenso-wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress
