legacy-manifests/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ofek-wordpress.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress    
            port:
              number: 80
